[gd_scene load_steps=14 format=3 uid="uid://bmulqlda6e6dp"]

[ext_resource type="Script" uid="uid://ps14xqgmeo40" path="res://scripts/ShopScene.gd" id="1_shop"]
[ext_resource type="PackedScene" uid="uid://d1dajjqaswbc5" path="res://scenes/ui/DiaryButton.tscn" id="2_diary"]
[ext_resource type="PackedScene" uid="uid://dekwi7eu718rh" path="res://scenes/ui/DictionaryButton.tscn" id="3_dictionary"]
[ext_resource type="PackedScene" uid="uid://c3flqqfogxuvj" path="res://scenes/ui/PapersButton.tscn" id="4_papers"]
[ext_resource type="PackedScene" uid="uid://cxxfsfqxetent" path="res://scenes/ui/MagnifyingGlassButton.tscn" id="5_magnifying"]
[ext_resource type="PackedScene" uid="uid://3qyykl75d1ax" path="res://scenes/ui/BellButton.tscn" id="6_bell"]
[ext_resource type="PackedScene" uid="uid://c8vqm8yvwknfb" path="res://scenes/ui/DebugConsole.tscn" id="7_debug"]
[ext_resource type="PackedScene" uid="uid://c5j7qvx8r5m0h" path="res://scenes/screens/QueueScreen.tscn" id="8_queue"]
[ext_resource type="PackedScene" uid="uid://c8r6m4n2p1x7y" path="res://scenes/screens/ExaminationScreen.tscn" id="9_exam"]
[ext_resource type="PackedScene" uid="uid://dh8nak3x1p4y2" path="res://scenes/screens/TranslationScreen.tscn" id="10_trans"]
[ext_resource type="PackedScene" uid="uid://b3n7k5w2sax4m" path="res://scenes/screens/DictionaryScreen.tscn" id="11_dict"]
[ext_resource type="PackedScene" uid="uid://c1vqoa0wmlgfy" path="res://scenes/ui/CustomerPopup.tscn" id="12_popup"]
[ext_resource type="PackedScene" uid="uid://cbxy6j1ciw3og" path="res://scenes/ui/BookPile.tscn" id="13_bookpile"]

[node name="ShopScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.031372547, 0.015686275, 1)

[node name="LeftBookshelf" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 500.0
offset_bottom = 1080.0

[node name="ShelfPanel" type="Panel" parent="LeftBookshelf"]
layout_mode = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 470.0
offset_bottom = 950.0

[node name="BooksContainer" type="Control" parent="LeftBookshelf"]
anchors_preset = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 930.0

[node name="LeftBookshelf2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 437.0
offset_top = -2.0
offset_right = 937.0
offset_bottom = 1078.0

[node name="ShelfPanel" type="Panel" parent="LeftBookshelf2"]
layout_mode = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 470.0
offset_bottom = 950.0

[node name="BooksContainer" type="Control" parent="LeftBookshelf2"]
anchors_preset = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 930.0

[node name="RightBookshelf" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 1401.0
offset_top = 2.0
offset_right = 1821.0
offset_bottom = 1082.0
scale = Vector2(1.1599951, 1)

[node name="ShelfPanel" type="Panel" parent="RightBookshelf"]
layout_mode = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 390.0
offset_bottom = 950.0

[node name="BooksContainer" type="Control" parent="RightBookshelf"]
anchors_preset = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 370.0
offset_bottom = 930.0

[node name="Ladder" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 520.0
offset_top = 200.0
offset_right = 620.0
offset_bottom = 800.0

[node name="LeftRail" type="ColorRect" parent="Ladder"]
layout_mode = 0
offset_left = 5.0
offset_right = 15.0
offset_bottom = 600.0
rotation = -0.15
color = Color(0.290196, 0.207843, 0.133333, 1)

[node name="RightRail" type="ColorRect" parent="Ladder"]
layout_mode = 0
offset_left = 75.0
offset_right = 85.0
offset_bottom = 600.0
rotation = -0.15
color = Color(0.290196, 0.207843, 0.133333, 1)

[node name="Rung1" type="ColorRect" parent="Ladder"]
layout_mode = 0
offset_left = 10.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 88.0
rotation = -0.15
color = Color(0.35, 0.25, 0.16, 1)

[node name="Rung2" type="ColorRect" parent="Ladder"]
layout_mode = 0
offset_left = 10.0
offset_top = 180.0
offset_right = 80.0
offset_bottom = 188.0
rotation = -0.15
color = Color(0.35, 0.25, 0.16, 1)

[node name="Rung3" type="ColorRect" parent="Ladder"]
layout_mode = 0
offset_left = 10.0
offset_top = 280.0
offset_right = 80.0
offset_bottom = 288.0
rotation = -0.15
color = Color(0.35, 0.25, 0.16, 1)

[node name="Rung4" type="ColorRect" parent="Ladder"]
layout_mode = 0
offset_left = 10.0
offset_top = 380.0
offset_right = 80.0
offset_bottom = 388.0
rotation = -0.15
color = Color(0.35, 0.25, 0.16, 1)

[node name="Rung5" type="ColorRect" parent="Ladder"]
layout_mode = 0
offset_left = 10.0
offset_top = 480.0
offset_right = 80.0
offset_bottom = 488.0
rotation = -0.15
color = Color(0.35, 0.25, 0.16, 1)

[node name="Doorway" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 988.0
offset_top = 98.0
offset_right = 1388.0
offset_bottom = 648.0

[node name="DoorFrame" type="ColorRect" parent="Doorway"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.2, 0.15, 1)

[node name="DoorLight" type="ColorRect" parent="Doorway"]
layout_mode = 1
offset_left = 33.0
offset_top = 48.0
offset_right = 333.0
offset_bottom = 498.0
scale = Vector2(1.1162796, 1.1363229)
color = Color(0.831373, 0.784314, 0.709804, 1)

[node name="WindowDivider" type="ColorRect" parent="Doorway/DoorLight"]
visible = false
layout_mode = 0
offset_left = 145.0
offset_right = 155.0
offset_bottom = 450.0
color = Color(0.25, 0.2, 0.15, 1)

[node name="Silhouette" type="ColorRect" parent="Doorway/DoorLight"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 450.0
color = Color(0.05, 0.05, 0.05, 1)

[node name="Head" type="ColorRect" parent="Doorway/DoorLight/Silhouette"]
layout_mode = 0
offset_left = 20.0
offset_top = -50.0
offset_right = 80.0
offset_bottom = 10.0
color = Color(0.05, 0.05, 0.05, 1)

[node name="Desk" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_top = 650.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="DeskSurface" type="ColorRect" parent="Desk"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.9600024)
color = Color(0.4, 0.266667, 0.12549, 1)

[node name="Papers" type="Control" parent="Desk"]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 623.0
offset_top = 229.0
offset_right = 1223.0
offset_bottom = 529.0

[node name="Paper1" type="Panel" parent="Desk/Papers"]
layout_mode = 0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 240.0
rotation = -0.12

[node name="Paper2" type="Panel" parent="Desk/Papers"]
layout_mode = 0
offset_left = 150.0
offset_right = 330.0
offset_bottom = 220.0
rotation = 0.08

[node name="Paper3" type="Panel" parent="Desk/Papers"]
layout_mode = 0
offset_left = 300.0
offset_top = 30.0
offset_right = 480.0
offset_bottom = 250.0
rotation = -0.06

[node name="Paper4" type="Panel" parent="Desk/Papers"]
layout_mode = 0
offset_left = 100.0
offset_top = 80.0
offset_right = 280.0
offset_bottom = 300.0
rotation = 0.15

[node name="OpenBook" type="Panel" parent="Desk"]
layout_mode = 0
offset_left = 699.0
offset_top = 39.0
offset_right = 1249.0
offset_bottom = 379.0

[node name="LeftPage" type="ColorRect" parent="Desk/OpenBook"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 260.0
offset_bottom = 325.0
color = Color(0.960784, 0.937255, 0.898039, 1)

[node name="RightPage" type="ColorRect" parent="Desk/OpenBook"]
layout_mode = 0
offset_left = 290.0
offset_top = 15.0
offset_right = 535.0
offset_bottom = 325.0
color = Color(0.960784, 0.937255, 0.898039, 1)

[node name="Spine" type="ColorRect" parent="Desk/OpenBook"]
layout_mode = 0
offset_left = 260.0
offset_top = 15.0
offset_right = 290.0
offset_bottom = 325.0
color = Color(0.2, 0.15, 0.1, 1)

[node name="DiaryButton" parent="Desk" instance=ExtResource("2_diary")]
layout_mode = 0
offset_left = 15.000015
offset_top = -12.000008
offset_right = 95.000015
offset_bottom = 87.99999

[node name="DictionaryButton" parent="Desk" instance=ExtResource("3_dictionary")]
layout_mode = 0
offset_left = 280.0
offset_top = 98.0
offset_right = 559.0
offset_bottom = 362.0

[node name="PapersButton" parent="Desk" instance=ExtResource("4_papers")]
layout_mode = 0
offset_left = 1375.0
offset_top = 89.00001
offset_right = 1525.0
offset_bottom = 209.0
scale = Vector2(2.7184825, 2.7184825)

[node name="MagnifyingGlassButton" parent="Desk" instance=ExtResource("5_magnifying")]
layout_mode = 0
offset_left = 598.0
offset_top = 283.0
offset_right = 668.0
offset_bottom = 353.0

[node name="BellButton" parent="Desk" instance=ExtResource("6_bell")]
layout_mode = 0
offset_left = 253.0
offset_top = -2.0
offset_right = 313.0
offset_bottom = 68.0

[node name="PanelZones" type="Node2D" parent="."]
z_index = 1
metadata/_edit_lock_ = true

[node name="QueueZone" type="ColorRect" parent="PanelZones"]
visible = false
offset_left = 50.0
offset_top = 456.0
offset_right = 359.0
offset_bottom = 939.0
color = Color(0.628906, 0.509277, 0.429199, 0.25098)

[node name="Label" type="Label" parent="PanelZones/QueueZone"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "Customer Queue (350x650)"

[node name="TranslationZone" type="ColorRect" parent="PanelZones"]
visible = false
offset_left = 403.0
offset_top = 726.0
offset_right = 854.0
offset_bottom = 1322.0
color = Color(0.956863, 0.909804, 0.847059, 0.25098)

[node name="Label" type="Label" parent="PanelZones/TranslationZone"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "Translation Workspace (500x650)"

[node name="DictionaryZone" type="ColorRect" parent="PanelZones"]
visible = false
offset_left = 1448.0
offset_top = 701.0
offset_right = 1874.0
offset_bottom = 1451.0
color = Color(0.628906, 0.509277, 0.429199, 0.25098)

[node name="Label" type="Label" parent="PanelZones/DictionaryZone"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "Glyph Dictionary (520x750)"

[node name="ExaminationZone" type="ColorRect" parent="PanelZones"]
visible = false
offset_left = 880.0
offset_top = 708.0
offset_right = 1400.0
offset_bottom = 1358.0
color = Color(0.628906, 0.509277, 0.429199, 0.25098)

[node name="Label" type="Label" parent="PanelZones/ExaminationZone"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "Book Examination (520x650)"

[node name="WorkZone" type="ColorRect" parent="PanelZones"]
visible = false
offset_left = 1050.0
offset_top = 700.0
offset_right = 1400.0
offset_bottom = 1350.0
color = Color(1, 0.843137, 0, 0.25098)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="PanelZones/WorkZone"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "Current Work (350x650)"

[node name="DebugConsole" parent="." instance=ExtResource("7_debug")]
visible = false
z_index = 1000
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="QueueScreen" parent="." instance=ExtResource("8_queue")]
visible = false
z_index = 10
layout_mode = 0
offset_left = 34.0
offset_top = 691.0
offset_right = 434.0
offset_bottom = 991.0

[node name="ExaminationScreen" parent="." instance=ExtResource("9_exam")]
visible = false
z_index = 10
layout_mode = 0
offset_left = 762.0
offset_top = 683.0
offset_right = 1362.0
offset_bottom = 1333.0

[node name="BookPile" parent="." instance=ExtResource("13_bookpile")]
visible = false
z_index = 10
layout_mode = 0
offset_left = 311.0
offset_top = 522.0
offset_right = 511.0
offset_bottom = 722.0

[node name="TranslationScreen" parent="." instance=ExtResource("10_trans")]
visible = false
z_index = 10
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1379.0
offset_top = 869.0
offset_right = 1779.0
offset_bottom = 1459.0
grow_horizontal = 1
grow_vertical = 1

[node name="DictionaryScreen" parent="." instance=ExtResource("11_dict")]
visible = false
z_index = 10
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 148.0
offset_top = 721.0
offset_right = 748.0
offset_bottom = 1411.0
grow_horizontal = 1
grow_vertical = 1

[node name="CustomerPopup" parent="." instance=ExtResource("12_popup")]
visible = false
z_index = 200
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 931.0
offset_top = 799.0
offset_right = 931.0
offset_bottom = 799.0
grow_horizontal = 1
grow_vertical = 1
